updated kotlin plugin and remove unnecessary settings.